# LSH-ICP

./: CMakeLists.txt  README.md  run.csh  surfaceNormalDF.yaml
data/: .car_cloud400_scaled.csv.icloud  2D_twoBoxes.csv.params  car_cloud400.csv.params  modified_car_cloud400.csv  modified_car_cloud400.csv~
data/icp_data/: RobustWelschOutlierFilterApproximation.cur_trans  SamplingSurfaceNormalDataPointsFilter1.cur_trans  SamplingSurfaceNormalDataPointsFilter2.cur_trans  SamplingSurfaceNormalDataPointsFilter3.cur_trans  defaultBoundingBoxDataPointsFilter.cur_trans  defaultFixStepSamplingDataPointsFilter.cur_trans  defaultMaxDensityDataPointsFilter.cur_trans  defaultMaxPointCountDataPointsFilter.cur_trans  defaultMaxQuantileOnAxisDataPointsFilter.cur_trans  defaultPointToPointMinDistDataPointsFilter.cur_trans  defaultRobustWelschOutlierFilter.cur_trans  defaultShadowDataPointsFilter.cur_trans  defaultSimilarityPointToPointMinDistDataPointsFilter.cur_trans
